# new-mcp-server

./: .gitignore  Claude.md  README.md  how-to-deploy.md  how-to-use.md  integration-universal.md  payload.b64  pdf.py  pyproject.toml  requirements.txt
playground/: README.md
playground/backend/: main.py  mcp_client.py  requirements.txt
playground/frontend/: index.html  script.js  style.css
scripts/: run_full_test.py
src/: reminders.py  server.py  tools.py
src/transports/: api.py  sse.py  stdio.py  streamable.py
